--- a/home.html
+++ b/home.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holi</title>
-    <link rel="stylesheet" href="styles2.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vacation Rentals</title>
+  <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
-    <div id='app'></div>
-    <script src="script.js"></script>
+  <header>
+    <nav>
+      <div class="logo">Vacation Rentals</div>
+      <ul>
+        <li><a href="#">Become a Host</a></li>
+        <li><a href="#">Trips</a></li>
+        <li><a href="#">Messages</a></li>
+        <li><a href="#">Profile</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h1>Find the perfect place to stay</h1>
+      <div class="search-bar">
+        <input type="text" placeholder="Where do you want to go?">
+        <button>Search</button>
+      </div>
+    </section>
+
+    <section class="listings">
+      <h2>Explore Vacation Rentals</h2>
+      <div class="listing-grid">
+        <!-- Listing items will be dynamically generated here -->
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Vacation Rentals. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
