--- a/home.html
+++ b/home.html
@@ -1,45 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vacation Rentals</title>
+  <title>Document</title>
   <link rel="stylesheet" href="styles2.css">
+
 </head>
+
 <body>
-  <header>
-    <nav>
-      <div class="logo">Vacation Rentals</div>
-      <ul>
-        <li><a href="#">Become a Host</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messages</a></li>
-        <li><a href="#">Profile</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="hero">
-      <h1>Find the perfect place to stay</h1>
-      <div class="search-bar">
-        <input type="text" placeholder="Where do you want to go?">
-        <button>Search</button>
+  <div class="slider">
+    <div class="slider-wrapper flex">
+      <div class="slide flex">
+        <div class="slide-image slider-link prev"><img src="https://goranvrban.com/codepen/img2.jpg">
+          <div class="overlay"></div>
+        </div>
+        <div class="slide-content">
+          <div class="slide-date">30.07.2017.</div>
+          <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+          <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in
+            vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex.
+          </div>
+          <div class="slide-more">READ MORE</div>
+        </div>
       </div>
-    </section>
-
-    <section class="listings">
-      <h2>Explore Vacation Rentals</h2>
-      <div class="listing-grid">
-        <!-- Listing items will be dynamically generated here -->
+      <div class="slide flex">
+        <div class="slide-image slider-link next"><img src="https://goranvrban.com/codepen/img3.jpg">
+          <div class="overlay"></div>
+        </div>
+        <div class="slide-content">
+          <div class="slide-date">30.08.2017.</div>
+          <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+          <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in
+            vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex.
+          </div>
+          <div class="slide-more">READ MORE</div>
+        </div>
       </div>
-    </section>
-  </main>
+      <div class="slide flex">
+        <div class="slide-image slider-link next"><img src="https://goranvrban.com/codepen/img5.jpg">
+          <div class="overlay"></div>
+        </div>
+        <div class="slide-content">
+          <div class="slide-date">30.09.2017.</div>
+          <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+          <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in
+            vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex.
+          </div>
+          <div class="slide-more">READ MORE</div>
+        </div>
+      </div>
+      <div class="slide flex">
+        <div class="slide-image slider-link next"><img src="https://goranvrban.com/codepen/img6.jpg">
+          <div class="overlay"></div>
+        </div>
+        <div class="slide-content">
+          <div class="slide-date">30.10.2017.</div>
+          <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+          <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in
+            vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex.
+          </div>
+          <div class="slide-more">READ MORE</div>
+        </div>
+      </div>
+    </div>
+    <div class="arrows">
+      <a href="#" title="Previous" class="arrow slider-link prev"></a>
+      <a href="#" title="Next" class="arrow slider-link next"></a>
+    </div>
+  </div>
+  <!-- Añade jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <footer>
-    <p>&copy; 2024 Vacation Rentals. All rights reserved.</p>
-  </footer>
+  <!-- Añade GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 
   <script src="script.js"></script>
 </body>
+
 </html>
