--- a/home.html
+++ b/home.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
+  <nav>
+    <ul>
+      <li><a href="#">Inicio</a></li>
+      <li><a href="#">Trending</a></li>
+      <li><a href="#">Popular</a></li>
+      <li><a href="#">Recientes</a></li>
+    </ul>
+  </nav>
+  
   <div class="slider">
+    <h1>Favoritos</h1>
     <div class="slider-wrapper flex">
       <div class="slide flex">
         <div class="slide-image slider-link prev"><img src="https://goranvrban.com/codepen/img2.jpg">
