--- a/home.html
+++ b/home.html
@@ -1,95 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<title>Store</title>
-		<link rel="stylesheet" href="home.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-			integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-	</head>
-	<body>
-		<header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Store</title>
+    <link rel="stylesheet" href="home.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <header>
       <nav>
         <ul>
-          <a href="#">Home</a></li>
-          <a href="#">All Flats</a></li>
-          <a href="#">New flat</a></li>
-          <a href="#">Profile Update</a></li>
+          <a href="home.html">Home</a>
+          <a href="#">All Flats</a>
+          <a href="#">New flat</a>
+          <a href="#">Profile Update</a>
+          <a href="favorites.html">Favoritos</a>
         </ul>
       </nav>
-			<div class="menu-header">
-				<button id="button-header-favorite">
-					<i class="fa-solid fa-heart"></i>
-					<span class="counter-favorite">0</span>
-				</button>
-				<button>
-					<i class="fa-solid fa-bag-shopping"></i>
-					<span class="counter-cart">0</span>
-				</button>
-			</div>
+      <div class="menu-header">
+        <button id="button-header-favorite">
+          <i class="fa-solid fa-heart"></i>
+          <span class="counter-favorite">0</span>
+        </button>
+        <button>
+          <i class="fa-solid fa-bag-shopping"></i>
+          <span class="counter-cart">0</span>
+        </button>
+      </div>
+    </header>
 
-			<div class="container-list-favorites">
-				<div class="header-favorite">
-					<h3>Mis Favoritos</h3>
-					<i class="fa-solid fa-xmark" id="btn-close"></i>
-				</div>
-				<hr />
-				<div class="list-favorites">
-					<div class="card-favorite">
-						<p class="title">Audífonos Bluetooth Pro</p>
-						<p>$150</p>
-					</div>
-				</div>
-			</div>
-		</header>
+    <div class="container">
+      <h1>Tienda</h1>
 
-		<div class="container">
-			<h1>Tienda</h1>
+      <div class="container-products">
+        <div class="card-product">
+          <div class="container-img">
+            <img
+              src="https://images.unsplash.com/photo-1606220945770-b5b6c2c55bf1?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="imagen Producto"
+            />
+          </div>
+          <div class="content-card-product" data-product-id="1">
+            <h3>Audífonos Bluetooth Pro</h3>
+            <p>Sonido de alta fidelidad, conexión inalámbrica estable.</p>
+            <div class="footer-card-product">
+              <span class="price">$79.99</span>
 
-			<div class="container-products">
-				<div class="card-product">
-					<div class="container-img">
-						<img
-							src="https://images.unsplash.com/photo-1606220945770-b5b6c2c55bf1?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-							alt="imagen Producto"
-						/>
-					</div>
-					<div class="content-card-product" data-product-id="1">
-						<h3>Audífonos Bluetooth Pro</h3>
-						<p>
-							Sonido de alta fidelidad, conexión inalámbrica estable.
-						</p>
-						<div class="footer-card-product">
-							<span class="price">$79.99</span>
-
-							<div class="container-buttons-card">
-								<button class="favorite">
-									<i
-										class="fa-regular fa-heart"
-										id="favorite-regular"
-									></i>
-									<i
-										class="fa-solid fa-heart"
-										id="added-favorite"
-									></i>
-								</button>
-								<button class="cart">
-									<i class="fa-solid fa-bag-shopping"></i>
-								</button>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="card-product">
+              <div class="container-buttons-card">
+                <button class="favorite">
+                  <i class="fa-regular fa-heart" id="favorite-regular"></i>
+                  <i class="fa-solid fa-heart" id="added-favorite"></i>
+                </button>
+                <button class="cart">
+                  <i class="fa-solid fa-bag-shopping"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-product">
 					<div class="container-img">
 						<img
 							src="https://images.unsplash.com/photo-1549109926-58f039549485?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
