--- a/favorites.html
+++ b/favorites.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <ul>
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
           <a href="#">All Flats</a>
           <a href="#">New flat</a>
           <a href="#">Profile Update</a>
