--- a/create_product.html
+++ b/create_product.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,8 +29,7 @@
     <div class="container-products mt-10"></div>
     <button id="clearStorage" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Clear Storage</button>
 
-    <script src="create_product.js">
-    </script>
+    <script src="create_product.js">  </script>
 </body>
 
 </html>
