--- a/Allflats.html
+++ b/Allflats.html
@@ -28,9 +28,15 @@
         <li><a href="Allflats.html">All Flats</a></li>
         <li><a href="create_product.html">New Flats</a></li>
         <li><a href="update.html">Profile Update</a></li>
+		<li><button>Adiosss</button></li>
       </ul>
     </nav>
-
+	<div class="filters">
+        <select id="city-filter">
+            <option value="">Todas las ciudades</option>
+        </select>
+        <input type="number" id="price-filter" placeholder="Precio máximo">
+    </div>
     <div class="container">
       <h1>Todos los Apartamentos</h1>
       <div class="container-products"></div>
