--- a/Allflats.html
+++ b/Allflats.html
@@ -18,7 +18,7 @@
     <nav class="cajaNav">
       <div class="titNav">
         <div class="logo-container">
-          <img src="Imagen_de_WhatsApp_2024-06-10_a_las_19.34.59_27eec311-removebg-preview.png" alt="imagen logo" class="logo-image">
+          <img src="1_Logo-removebg-preview.png" alt="imagen logo" class="logo-image">
         </div>
         <div class="toggle" onclick="alternar('menu')">Abrir</div>
       </div>
@@ -40,5 +40,6 @@
       <h1>Todos los Apartamentos</h1>
       <div class="container-products"></div>
     </div>
+    <script src="allflats.js"></script>
   </body>
 </html>
