--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   <nav class="cajaNav">
     <div class="titNav">
       <div class="logo-container">
-        <img src="Imagen_de_WhatsApp_2024-06-10_a_las_19.34.59_27eec311-removebg-preview.png" alt="imagen logo" style="width: 100px;">
+        <img src="1_Logo-removebg-preview.png" alt="imagen logo" style="width: 100px;">
       </div>
     </div>
     <ul class="barNav cerrado" id="menu">
